lesson 3 netty