@@ -6,6 +6,7 @@ import java.io.FileOutputStream;
 import java.net.Socket;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -26,7 +27,7 @@ public class ChatHandler implements Runnable {
 
     public ChatHandler(Socket socket, Server server) throws Exception {
         buffer = new byte[BUFFER_SIZE];
-        root = Path.of("server_root");
+        root = Paths.get("server_root");
         if (!Files.exists(root)) {
             Files.createDirectory(root);
         }
